--- a/src/css/style.css
+++ b/src/css/style.css
@@ -709,6 +709,88 @@ Product Page
     }
     /**************************************************************
 ****************
+CHECKOUT PAGE
+*****************
+**************************************************************/
+    
+    h1.custom-heading {
+        font-size: 36px;
+        margin: 25px 0;
+    }
+    
+    .custom-table .custom-media img {
+        width: 80px;
+        height: 80px;
+        border: 1px solid #EBEBEB;
+        margin-left: 10px;
+    }
+    
+    .custom-table .custom-media h4 {
+        font-size: 18px;
+        margin: 12px 0;
+    }
+    
+    .custom-table .quantity {
+        width: 56px;
+        height: 34px !important;
+        padding: 0px 8px;
+        text-align: center;
+        margin: 0 auto;
+    }
+    
+    .custom-table th,
+    .custom-table td {
+        padding: 15px;
+        border-bottom: 1px solid #EBEBEB;
+        border-top: 1px solid #EBEBEB;
+    }
+    
+    .custom-table th:first-child,
+    .custom-table td:first-child {
+        width: 50%;
+    }
+    
+    .custom-btn-danger {
+        color: #ff5a5f;
+        background-color: #ff5a5f;
+        background-color: transparent;
+        border-radius: 3px;
+    }
+    
+    .custom-btn-danger:hover,
+    .custom-btn-danger:active,
+    .custom-btn-danger:focus,
+    .custom-btn-danger:active:focus,
+    .custom-btn-danger:active:hover {
+        color: #C2101E;
+        border-color: #C2101E;
+        background-color: transparent;
+    }
+    
+    .custom-table .custom-media {
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-bottom: 15px;
+    }
+    
+    .custom-table th:first-child {
+        padding-right: 50px;
+    }
+    
+    .custom-table tfoot td {
+        border-bottom: none;
+        font-size: 100%;
+    }
+    
+    .custom-table .total-price * {
+        color: #000;
+    }
+    
+    .custom-table .total-price .custom-text-muted .custom-text-muted {
+        color: #A9A9A9;
+    }
+    /**************************************************************
+****************
 HEDIA QUERY
 *****************
 **************************************************************/
@@ -831,6 +913,10 @@ HEDIA QUERY
         }
         #newsletter form .input-group {
             width: 100%;
+        }
+        /*checkout page*/
+        .hide-on-small {
+            display: none;
         }
     }
     
