--- a/src/css/style.css
+++ b/src/css/style.css
@@ -838,6 +838,20 @@ PAYMENT PAGE
 
 /**************************************************************
 ****************
+SEARCH PAGE
+*****************
+**************************************************************/
+
+#form-advanced-search {
+    border: 1px solid #EBEBEB;
+    padding-bottom: 20px;
+    margin-bottom: 35px;
+    display: table;
+}
+
+
+/**************************************************************
+****************
 HEDIA QUERY
 *****************
 **************************************************************/
