--- a/src/css/style.css
+++ b/src/css/style.css
@@ -904,6 +904,46 @@ SEARCH PAGE
 
 /**************************************************************
 ****************
+CONTACT PAGE
+*****************
+**************************************************************/
+
+#map {
+    padding: 0;
+}
+
+#contact-options h4 {
+    font-size: 18px;
+    padding-bottom: 12px;
+}
+
+.heading-with-border-bottom {
+    margin-bottom: 20px;
+}
+
+#contact-info {
+    margin-bottom: 25px;
+}
+
+#contact-info .fa-lg {
+    color: #f3af41;
+    font-size: 18px;
+    margin: 10px;
+    width: 25px;
+    text-align: center;
+}
+
+#contact-options textarea {
+    height: 128px !important;
+}
+
+#contact-options {
+    margin-bottom: 25px;
+}
+
+
+/**************************************************************
+****************
 MEDIA QUERY
 *****************
 **************************************************************/
@@ -1000,6 +1040,10 @@ MEDIA QUERY
         height: 20px !important;
         width: 20px !important;
         top: -10px !important;
+    }
+    /*contact page*/
+    #form-subscription {
+        margin-bottom: 40px;
     }
 }
 
