--- a/src/css/style.css
+++ b/src/css/style.css
@@ -236,7 +236,7 @@ body {
     width: 75px;
     background-color: #fff;
     border: 2px solid #DDDDDB;
-    margin-right: 2px;
+    margin-left: 2px;
 }
 
 .custom-carousel-indicators-primary img.active {
